--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "vue3-mobile-detection",
   "version": "1.0.0",
   "description": "Mobile browser detection for Vue.js 3",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "repository": "https://github.com/KanHarI/vue3-mobile-detection",
   "author": "Itay KanHar <knaan.harpaz@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@types/node": "^14.14.17",
+    "@types/webpack-env": "^1.16.0",
     "is-mobile": "^2.2.2",
+    "typescript": "^4.1.3",
     "vue": "^3.0.0"
+  },
+  "scripts": {
+    "build": "tsc"
   }
 }
