--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "vue3-mobile-detection",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Mobile browser detection for Vue.js 3",
   "main": "dist/index.js",
   "repository": "https://github.com/KanHarI/vue3-mobile-detection",
   "author": "Itay KanHar <knaan.harpaz@gmail.com>",
   "license": "MIT",
+  "private": false,
   "dependencies": {
-    "@types/node": "^14.14.17",
-    "@types/webpack-env": "^1.16.0",
     "is-mobile": "^2.2.2",
-    "typescript": "^4.1.3",
     "vue": "^3.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.3",
+    "@types/node": "^14.14.17",
+    "@types/webpack-env": "^1.16.0"
   },
   "scripts": {
     "build": "tsc"
-  }
+  },
+  "keywords": [
+    "vue",
+    "mobile",
+    "detection"
+  ]
 }
