--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-mobile-detection",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Mobile browser detection for Vue.js 3",
   "main": "dist/index.js",
   "repository": "https://github.com/KanHarI/vue3-mobile-detection",
@@ -13,8 +13,7 @@
   },
   "devDependencies": {
     "typescript": "^4.1.3",
-    "@types/node": "^14.14.17",
-    "@types/webpack-env": "^1.16.0"
+    "@types/node": "^14.14.17"
   },
   "scripts": {
     "build": "tsc"
