--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.1.3",
-    "@types/node": "^14.14.17"
+    "@babel/types": "^7.16.0",
+    "@types/node": "^14.14.17",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "build": "tsc"
