--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc --declaration"
   },
   "keywords": [
     "vue",
